Fixed jump to current dir when switching Panel<->Window

--- a/docex_styles.css
+++ b/docex_styles.css
@@ -604,6 +604,7 @@ html[data-theme="light"] {
   display: flex !important;
   align-items: center;
   overflow: visible;
+  font-weight: bold;
 }
 
 /* Zone that acts like a folder click */
@@ -630,16 +631,30 @@ html[data-theme="light"] {
   cursor: url("/.fs/Library/Mr-xRed/hybrid-cursor.svg") 2 2, pointer !important;
 }
 
-html[data-theme="dark"] .hybrid-md-badge {
+html[data-theme="dark"] {
+  .hybrid-md-badge {
   color: var(--file-md-color);
   background: oklch(from var(--file-md-color) 0.25 0.02 h / 1);
   border: 1px solid oklch(from var(--file-md-color) 0.5 0.05 h / 1);
+  }
+  .mode-grid .hybrid-tile,
+  .mode-list .hybrid-tile,
+  .mode-tree .hybrid-tile  {
+  color: oklch(from var(--file-md-color) 0.75 0.25 h);
+  }
 }
 
-html[data-theme="light"] .hybrid-md-badge {
+html[data-theme="light"] {
+  .hybrid-md-badge {
   color: oklch(from var(--file-md-color) 0.45 0.2 h / 1);
   background: oklch(from var(--file-md-color) 0.95 0.05 h / 1);
   border: 1px solid oklch(from var(--file-md-color) 0.8 0.05 h / 1);
+  }
+  .mode-grid .hybrid-tile,
+  .mode-list .hybrid-tile,
+  .mode-tree .hybrid-tile  {
+  color: oklch(from var(--file-md-color) 0.55 0.25 h);
+  }
 }
 
 
